# niji

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  client.py  main.py  pyproject.toml  test_config.yaml  todo.txt
.github/workflows/: ci.yml  publish.yml  release.yml  ruff.yml
configs/: bert-mini.yaml  bert-tiny.yaml  distilbert-base.yaml  jigsaw-bert-tiny.yaml  jigsaw-config.yaml  jigsaw-test.yaml  jigsaw.yaml  jigsaw_full.yaml  jigsaw_test.yaml  test_jigsaw.yaml
images/icon/: raw.ai
src/blanket/: __init__.py  config.py  dataloaders.py  datamodule.py  models.py  module.py  predictor.py  trainer.py  utils.py
src/blankett/: __init__.py  dataloaders.py  models.py  predictor.py  trainer.py  utils.py
src/blanki/: __init__.py  cli.py  dataloader.py  exceptions.py  inference.py  module.py  server.py  training.py
src/niji/: __init__.py  config.py  dataloader.py  eval.py  exceptions.py  inference.py  module.py  schedulers.py  server.py  training.py  types.py
src/nm/: __init__.py  module.py  trainer.py
src/nomore/: __init__.py  datamodule.py  trainer.py
src/ruffle/: __init__.py  benchmark.py  benchmarks.py  cli.py  config.py  core.py  dataloader.py  dataloaders.py  dataset.py  inference.py  model.py  models.py  module.py  predictor.py  server.py  tester.py  trainer.py  training.py  types.py  utils.py
src/rynn/: __init__.py  dataloaders.py  models.py  predictor.py  setup.py  trainer.py  types.py  utils.py
src/stormy/: __init__.py  config.py  datamodule.py  lr_schedulers.py  module.py  predict.py  predictor.py  server.py  trainer.py  utils.py
src/stormy_ai/: __init__.py  datamodule.py  utils.py
src/tachy/: __init__.py  datamodule.py  module.py  predictor.py  trainer.py
tests/: test_dataloader.py  test_dataloaders.py  test_dataset.py  test_inference.py  test_predictor.py  test_temp.py  test_utils.py
