[project]
name = "ruffle"
version = "0.0.1a3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "jsonargparse[signatures]>=4.40.0",
    "lightning>=2.5.3",
    "transformers>=4.55.2",
    "rich>=14.1.0",
    "tensorboard>=2.20.0",
]

[project.scripts]
ruffle = "ruffle.predictor:cli_main"
train = "ruffle.trainer:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "ty>=0.0.1a20",
]

[tool.ty.environment]
python = "./.venv"
python-platform = "darwin"
python-version = "3.13"

[tool.ty.terminal]
output-format = "concise"
error-on-warning = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "W",   # pycdoestyle (warnings)
    "F",   # pyflakes
    "B",   # bugbear
    "B9",
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "I",   # isort
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
]

ignore = [
    # only relevant if you run a script with `python -0`,
    # which seems unlikely for any of the scripts in this repo
    "B011",
    # Leave it to the formatter to split long lines and
    # the judgement of all of us.
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
